# ncnn-android-nanodet

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp  rtspcamera.cpp  rtspcamera.h  rtspclient.cpp  rtspclient.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavcodec/: ac3_parser.h  avcodec.h  xvmc.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavfilter/: avfilter.h  buffersrc.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: avutil.h  frame.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  hwcontext_qsv.h  hwcontext_vaapi.h  hwcontext_videotoolbox.h  mastering_display_metadata.h  parseutils.h  pixfmt.h  tx.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libswscale/: swscale.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavcodec/: dv_profile.h  vorbis_parser.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavfilter/: buffersink.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavutil/: aes_ctr.h  bprint.h  display.h  downmix_info.h  encryption_info.h  hdr_dynamic_metadata.h  hwcontext_drm.h  hwcontext_vdpau.h  mathematics.h  motion_vector.h  spherical.h  stereo3d.h  threadmessage.h  timecode.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libswresample/: swresample.h
app/src/main/cpp/opencv-mobile-4.5.1-android/sdk/native/jni/include/opencv2/: imgproc.hpp
app/src/main/cpp/opencv-mobile-4.5.1-android/sdk/native/jni/include/opencv2/core/: core_c.h  opengl.hpp
app/src/main/cpp/opencv-mobile-4.5.1-android/sdk/native/jni/include/opencv2/video/: background_segm.hpp  tracking.hpp
app/src/main/java/com/tencent/nanodetncnn/: MainActivity.java  NanoDetNcnn.java
app/src/main/jni/: CMakeLists.txt  nanodetncnn.cpp
app/src/main/res/layout/: main.xml
gradle/wrapper/: gradle-wrapper.properties
